@@ -185,7 +185,6 @@ _fputchar
 _fputwchar
 _fsopen
 _fstat
-_fstati64
 _ftime
 _ftol
 _fullpath
@@ -391,7 +390,6 @@ _spawnvp
 _spawnvpe
 _splitpath
 _stat
-_stati64
 _statusfp
 _strcmpi
 _strdate
@@ -499,7 +497,6 @@ _wspawnvp
 _wspawnvpe
 _wsplitpath
 _wstat
-_wstati64
 _wstrdate
 _wstrtime
 _wsystem
